infra/k8s/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: avinashrajure/expense-tracker-server:latest
          ports:
            - containerPort: 3001


---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
